# Doc-Managment-System

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/agents/document_parser/: graph.py  nodes.py  prompts.py  state.py
app/agents/document_parser/tools/: __init__.py  arabic.py  docs.py  easy_ocr.py  excel.py  image.py  pdf.py
app/agents/rag_chat/: graph.py  nodes.py  prompts.py  state.py  tools.py
app/api/: __init__.py  chat.py  upload.py
app/core/: settings.py
app/services/: chunker.py  embeddings.py  qdrant_client.py
app/templates/: rag_chat.html  upload_files.html
app/utils/: file_handler.py  helpers.py  logger.py
